@@ -28,4 +28,6 @@ TODO: openbsd requites stdint.h for intptr_t - why posix?
         - no longer set errno to 0 before making syscalls, this only lures
           people into the trap of believing errno shows success or failure.
         - "fix" demo.c so that it works as non-root.
+        - suppoert utimes seperately from futimes, as some systems have
+          utimes but not futimes.
 
